--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -13,8 +13,8 @@ h1 {
 
 $primaryColor: #eeffcc;
 $bgColor: #f5f5f5;
-
 $button-padding: 20px;
+
 %border-basic {
   border: 1px solid #e4e2e2;
 }
@@ -45,5 +45,23 @@ $button-padding: 20px;
   line-height: 0;
   background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png)
     no-repeat;
+  text-indent: -9999px;
+  cursor: pointer;
+}
+
+%planning__paging-btn {
+  display: flex;
+  width: 15px;
+  height: 5px;
+  margin: 1px;
+  cursor: pointer;
+}
+
+%planning__paging-num {
+  display: block;
+  width: 15px;
+  height: 5px;
+  font-size: 0;
+  line-height: 0;
   text-indent: -9999px;
 }
